<resources>
    <string name="app_name">BizDir</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_compact_header">CompactHeader Sample</string>
    <string name="drawer_item_action_bar">ActionBar Sample</string>
    <string name="drawer_item_multi_drawer">MultiDrawer Sample</string>
    <string name="drawer_item_non_translucent_status_drawer">NonTranslucentStatusDrawer Sample</string>
    <string name="drawer_item_complex_header_drawer">ComplexHeaderDrawer Sample</string>
    <string name="drawer_item_simple_fragment_drawer">SimpleFragment Sample</string>
    <string name="drawer_item_embedded_drawer">EmbeddedDrawer Sample</string>
    <string name="drawer_item_fullscreen_drawer">FullScreen Sample</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="drawer_item_search">Search</string>
    <string name="drawer_item_favorite">Favorite</string>
    <string name="drawer_item_category">Category</string>
    <string name="drawer_item_association">Association</string>
    <string name="drawer_item_opportunities">Opportunities</string>
    <string name="drawer_item_news">News</string>
    <string name="drawer_item_forum">Forum</string>
    <string name="drawer_item_forums">Forums</string>
    <string name="drawer_item_promotion">Promotion</string>
    <string name="drawer_item_event_calendar">Event Calendar</string>
    <string name="drawer_item_download">Download</string>
    <string name="drawer_item_header_other">Other</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_faq">FAQ</string>
    <string name="drawer_item_logout">Logout</string>
    <string name="title_verification_form">Verification Form</string>
    <string name="title_image_view">Gallery</string>
    <string name="title_stock_detail">Stock Info</string>
    <string name="title_weather_detail">Weather Forecast</string>
    <string name="title_register">Register</string>
    <string name="title_profile">Profile</string>
    <string name="title_walkthrough">Walkthrough</string>
    <string name="category_item_nature">Nature Products</string>
    <string name="category_item_gifts">Gifts, Arts &amp; Crafts</string>
    <string name="category_item_automotive">Automotive Components</string>
    <string name="category_item_chemical">Chemical Products</string>
    <string name="category_item_electricity">Electricity &amp; Electronics</string>
    <string name="category_item_food">Food &amp; Beverages</string>
    <string name="category_item_home">Home, Lights &amp; Construction</string>
    <string name="category_item_event_jewellery">Jewellery, Bags &amp; Shoes</string>
    <string name="category_item_health">Health &amp;  Beauty</string>
    <string name="category_item_machine">Machine, Hardware &amp;  Tools</string>
    <string name="category_item_printing">Printing, Advertising &amp; Office</string>
    <string name="category_item_raw">Raw Minerals &amp; Energy</string>
    <string name="category_item_business">Business &amp; Other Services</string>
    <string name="category_item_sport">Sport, Toys &amp; Hobbies</string>
    <string name="category_item_apparel">Apparel, Textile &amp; Accessories</string>
    <string name="category_sub_item_nature_agricultural">Agricultural Waste</string>
    <string name="category_sub_item_nature_animal">Animal</string>
    <string name="category_sub_item_nature_cigarettes">Cigarettes and Tobacco</string>
    <string name="category_sub_item_nature_essential">Essential Oils</string>
    <string name="category_sub_item_nature_marine">Marine Product</string>
    <string name="category_sub_item_nature_organic">Organic Product</string>
    <string name="category_sub_item_nature_plan">Plan and Vegetables</string>
    <string name="member_detail_contact_full_name">Full Name</string>
    <string name="member_detail_contact_address">Address</string>
    <string name="member_detail_contact_phone">Phone</string>
    <string name="member_detail_contact_fax">Fax</string>
    <string name="member_detail_contact_email">Email</string>
    <string name="member_detail_contact_new_email">New Email Address</string>
    <string name="member_detail_contact_email_address">Email Address</string>
    <string name="member_detail_contact_website">Website</string>
    <string name="member_detail_contact_hint">-</string>
    <string name="member_detail_contact_no_kta">No KTA</string>
    <string name="member_detail_contact_npwp">NPWP</string>
    <string name="search_company_code_hint">Search Code</string>
    <string name="news_category">News Category :</string>
    <string name="news_category_hint">News Category</string>
    <string name="news_stock_market_board">Market Board</string>
    <string name="news_stock_open">Open</string>
    <string name="news_stock_last">Last</string>
    <string name="news_stock_change">Change</string>
    <string name="news_stock_percent_change">Percent Change</string>
    <string name="news_stock_value">Value</string>
    <string name="news_stock_volume">Volume</string>
    <string name="news_stock_stock_code">Stock Code</string>
    <string name="news_stock_high">High</string>
    <string name="news_stock_low">Low</string>
    <string name="news_stock_stock_name">Stock Name</string>
    <string name="news_stock_close">Close</string>
    <string name="news_stock_source">Source</string>
    <string name="news_stock_link_source">http://wwww.imq21.com</string>
    <string name="user_full_name">Full Name</string>
    <string name="bottom_sheet_call">Call</string>
    <string name="bottom_sheet_phonecall">Phone Call</string>
    <string name="bottom_sheet_sendemail">Send Email</string>
    <string name="bottom_sheet_openwebsite">Open Website</string>
    <string name="bottom_sheet_showonmap">Show On Map</string>
    <string name="bottom_submit">SUBMIT</string>
    <string name="bottom_attend">Attend</string>
    <string name="bottom_not_attend">Not Attend</string>
    <string name="button_search">What do you want to find?</string>
    <string name="button_register">Register</string>
    <string name="button_Login">Login</string>
    <string name="button_cant_access">I cannot access my account</string>
    <string name="button_skip">Skip</string>
    <string name="button_already_member">Already a Member?</string>
    <string name="create_rspv">Please give RSVP to this Event!</string>
    <string name="error_create_rspv">Sorry, error when create RSPV, please try again!</string>
    <string name="success_create_rspv">Create RSVP is success!</string>
    <string name="fill_phone_number">Please fill in Your phone number in profile to see the RSVP!</string>
    <string name="action_email_us">Email Us</string>
    <string name="action_share_this">Share This</string>
    <string name="action_favorite_member">Add to favorite</string>
    <string name="action_refresh">Refresh Data</string>
    <string name="action_home">Goto Home</string>
    <string name="action_reply_forum">Post Reply</string>
    <string name="action_post_message_forum">Post Message</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_reset_password_message">Please input email address</string>
    <string name="action_message">Message</string>
    <string name="action_submit">Submit</string>
    <string name="action_search">Search</string>
    <string name="action_search_location">Search Location</string>
    <string name="action_verification">Verification</string>
    <string name="bizdir_url">http://www.bizdir.id</string>
    <string name="bizdir_by">By :</string>
    <string name="bizdir_by_kadin">KADIN Indonesia</string>
    <string name="bizdir_by_kadin_splash">By KADIN Indonesia</string>
    <string name="alamat_kadin">Menara Kadin Indonesia Lt. 29\nJalan HR Rasuna Said X&#8211;5 kav 2&#8211;3,\nJakarta 12950 &#8211; Indonesia</string>
    <string name="action_change_news">Business News Category</string>
    <string name="action_change_stock_category">Stock News Category</string>
    <string name="action_change_forum">Forum Category</string>
    <string name="user_logout_title">Confirm Logout</string>
    <string name="user_logout_message">Are you sure you want to Logout?</string>
    <string name="button_ok">OK</string>
    <string name="button_copy">Copy to Clipboard</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_choose">Choose</string>
    <string name="button_email_bizdir">Email BizDir</string>
    <string name="button_kadin_address">KADIN ADDRESS</string>
    <string name="button_verification">Verification</string>
    <string name="email_bizdir">info@bizdir.id</string>
    <string name="dialog_bizdirid">BizDir Id</string>
    <string name="dialog_bizdirid_not_available">Sorry BizDir Id is not available for this profile!</string>
    <string name="dialog_bizdirid_success_copy">Copying BizDir Id was successful!</string>
    <string name="clear_selection">Clear All</string>
    <string name="loading_page">Loading Page</string>
    <string name="loading_page_title">Please wait, loading page</string>
    <string name="alamat_kadin_title">Alamat Kadin</string>
    <string name="app_exit_title">Confirm Exit</string>
    <string name="app_exit_message">Are you sure you want to Exit?</string>
    <string name="app_logout_title">Confirm Logout</string>
    <string name="app_logout_message">Are you sure you want to Logout?</string>
    <string name="app_login_title">Confirm Login</string>
    <string name="app_login_message">Are you sure you want to Login?</string>
    <string name="app_need_login_title">Please Login</string>
    <string name="app_need_login_message">You must login first! Are you sure you want to Login?</string>
    <string name="member_add_favorite_title">Add To Favorite</string>
    <string name="member_add_favorite_message">Are you sure you want to Add to Favorite?</string>
    <string name="member_remove_favorite_title">Remove From Favorite</string>
    <string name="member_remove_favorite_message">Are you sure you want to Remove from Favorite?</string>
    <string name="error_remove_favorite">Sorry, error when remove favorite!</string>
    <string name="error_add_favorite">Sorry, error when add favorite!</string>
    <string name="verification_on">Verified Member</string>
    <string name="verification_off">Unverified Member</string>
    <string name="bizdir_info">Info BizDir</string>
    <string name="change_location">Change Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="location_indonesia">Indonesia</string>
    <string name="celsius">N/A°C</string>
    <string name="search_hot_deal">Hot Deals</string>
    <string name="password">Password</string>
    <string name="password_repeat">Confirm Password</string>
    <string name="user_phone">Phone</string>
    <string name="user_gender">Gender</string>
    <string name="user_gender_male">Male</string>
    <string name="user_gender_Female">Female</string>
    <string name="user_birthday">Birthday</string>
    <string name="user_no_kta">No KTA</string>
    <string name="user_interest">Interest</string>
    <string name="user_bizdirid">BizDir Id</string>
    <string name="intent_error_call">Mobile Network Not Available on this device</string>
    <string name="intent_error_open_url">No browser client installed</string>
    <string name="no_data">No data available</string>
    <string name="banner_ad_unit_id">ca-app-pub-2428139824666330/3718360802</string>
</resources>