<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:layout_marginEnd="@dimen/material_drawer_margin"
    android:layout_marginRight="@dimen/material_drawer_margin"
    android:elevation="8dp"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_top"
        layout="@layout/toolbar_top" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <id.bizdir.ui.widget.DrawShadowFrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:clipChildren="false"
        app:shadowDrawable="@drawable/header_shadow">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background_main" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:fillViewport="true"
                android:overScrollMode="never">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:id="@+id/textCompanyName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TextTitleLitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/news_stock_stock_code" />

                    <EditText
                        android:id="@+id/editStockCode"
                        style="@style/EditTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/member_detail_contact_hint" />

                    <TextView
                        style="@style/TextTitleLitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/news_stock_stock_name" />

                    <EditText
                        android:id="@+id/editStockName"
                        style="@style/EditTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/member_detail_contact_hint" />

                    <TextView
                        style="@style/TextTitleLitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/news_stock_market_board" />

                    <EditText
                        android:id="@+id/editMarketBoard"
                        style="@style/EditTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/member_detail_contact_hint" />

                    <TextView
                        style="@style/TextTitleLitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/news_stock_last" />

                    <EditText
                        android:id="@+id/editLast"
                        style="@style/EditTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/member_detail_contact_hint" />

                    <TextView
                        style="@style/TextTitleLitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/news_stock_open" />

                    <EditText
                        android:id="@+id/editOpen"
                        style="@style/EditTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/member_detail_contact_hint" />

                    <TextView
                        style="@style/TextTitleLitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/news_stock_change" />

                    <EditText
                        android:id="@+id/editChange"
                        style="@style/EditTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/member_detail_contact_hint" />

                    <TextView
                        style="@style/TextTitleLitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/news_stock_percent_change" />

                    <EditText
                        android:id="@+id/editPercentChange"
                        style="@style/EditTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/member_detail_contact_hint" />'

                    <TextView
                        style="@style/TextTitleLitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/news_stock_value" />

                    <EditText
                        android:id="@+id/editValue"
                        style="@style/EditTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/member_detail_contact_hint" />

                    <TextView
                        style="@style/TextTitleLitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/news_stock_volume" />

                    <EditText
                        android:id="@+id/editVolume"
                        style="@style/EditTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/member_detail_contact_hint" />

                    <TextView
                        style="@style/TextTitleLitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/news_stock_high" />

                    <EditText
                        android:id="@+id/editHigh"
                        style="@style/EditTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/member_detail_contact_hint" />

                    <TextView
                        style="@style/TextTitleLitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/news_stock_low" />

                    <EditText
                        android:id="@+id/editLow"
                        style="@style/EditTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/member_detail_contact_hint" />

                    <TextView
                        style="@style/TextTitleLitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/news_stock_close" />

                    <EditText
                        android:id="@+id/editClose"
                        style="@style/EditTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/member_detail_contact_hint" />

                    <TextView
                        style="@style/TextTitleLitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/news_stock_source" />

                    <EditText
                        android:id="@+id/editSource"
                        style="@style/EditTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_exit_to_app_black_24dp"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/member_detail_contact_hint"
                        android:text="@string/news_stock_link_source" />

                </LinearLayout>
            </ScrollView>


        </LinearLayout>

    </id.bizdir.ui.widget.DrawShadowFrameLayout>
</RelativeLayout>

