<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/editNewsCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/textLastUpdate"
            android:drawableRight="@drawable/ic_keyboard_arrow_down_white_24dp"
            android:hint="@string/news_category_hint"
            android:singleLine="true"
            android:editable="false"
            android:inputType="none"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textLastUpdate"
            style="@style/TextShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:text="@string/news_category"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/activity_main_swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/listNewsBusiness"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:cacheColorHint="@color/listview_cache_color_hint"
                android:divider="@color/white_transparent"
                android:dividerHeight="1px"
                android:fastScrollEnabled="true" />

        </android.support.v4.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/textNoData"
            style="@style/TextShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_data"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </FrameLayout>
</LinearLayout>



